--- a/visualization .Rmd
+++ b/visualization .Rmd
@@ -168,10 +168,30 @@ weather_df %>%
   geom_density_ridges()
 ```
 
+## Sae and embed 
+
+Let's save a scatterpot. 
+
+```{r}
+weather_plot = 
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5)
+
+ggsave("./results/weather_plot.pdf", weather_plot, width = 8, height = 5)
+```
 
 
 
+what about embedding...
 
+```{r, fig.width=6, fig.height=3}
+weather_plot
+```
+
+```{r, fig.width=12, fig.height=6}
+weather_plot
+```
 
 
 
