--- a/visualization_part 2.Rmd
+++ b/visualization_part 2.Rmd
@@ -211,6 +211,27 @@ weather_df %>%
   theme(legend.position = "bottom")
 ```
 
+## Setting options 
+ 
+```{r, eval = FALSE}
+library(tidyverse)
+knitr::opts_chunk$set(
+  fig.width = 6, 
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+themes_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_color_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+
+```
 
 
 
