--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -14,7 +14,7 @@ library(patchwork)
 ## Load the weather data 
 
 ```{r}
-weather_df = 
+weather_df =  
   rnoaa::meteo_pull_monitors(
     c("USW00094728", "USC00519397", "USS0023B17S"),
     var = c("PRCP", "TMIN", "TMAX"), 
@@ -27,8 +27,124 @@ weather_df =
       USC00519397 = "Waikiki_HA",
       USS0023B17S = "Waterhole_WA"),
     tmin = tmin / 10,
-    tmax = tmax / 10) %>%
+    tmax = tmax / 10,
+    month = lubridate::floor_date(date, unit = "month")) %>%
   select(name, id, everything())
+```
+
+## `group by`
+
+```{r}
+weather_df %>% 
+  group_by(name) 
+```
+
+## count some things 
+
+```{r}
+weather_df %>% 
+  group_by(month) %>% 
+  summarize(n_obs = n())
+
+weather_df %>% 
+  count(name)
+```
+
+It's nice that summarize produces a data frame 
+
+```{r}
+weather_df %>% 
+  pull(name) %>% 
+  table() 
+```
+
+
+```{r}
+weather_df %>% 
+  janitor::tabyl(month, name)
+```
+
+## More general summaries 
+
+Let's count, take means, look at SDs...
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  summarize(
+    n_obs = n(),
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    medain_tmax = median(tmax, na.rm = TRUE), 
+    sd_tmax = sd(tmax, na.rm = TRUE), 
+  ) %>% 
+  ggplot(aes(x = date, y = mean_tmax, color = name)) +
+  geom_point() +
+  geom_line()
+```
+Formatting table outputs
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  summarize(
+    n_obs = n(),
+    mean_tmax = mean(tmax, na.rm = TRUE)
+  ) %>% 
+  knitr::kable(digits = 2)
+```
+
+## grouped `mutate`
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  mutate(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    centered_tmax = tmax - mean_tmax
+  ) %>% 
+  ggplot(aes(x = date, y = centered_tmax, color = name)) +
+  geom_point()
+```
+
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  mutate(
+    tmax_rank = min_rank(desc(tmax))
+  ) %>% 
+  filter(tmax_rank < 2)
+```
+
+
+lagged variables 
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  mutate(
+    lagged_tmax = lag(tmax, n = 1),
+    tmax_diff = tmax - lagged_tmax
+  ) %>% 
+  summarize(diff_sd = sd(tmax_diff, na.rm = TRUE))
+```
+
+## Limitations 
+
+What if my "summary" is a linear model...
+
+well...
+
+```{r, eval = FALSE}
+weather_df %>% 
+  group_by(name) %>% 
+  summarize(cor_tmin_tmax = cor(tmin, tmax, use = "complete"))
+
+weather_df %>% 
+  filter(name == "CentralPark_NY") %>%
+  lm(tmax ~ tmin, data = .)
+
+weather_df %>% 
+  group_by(name) %>% 
+  summarize(lm = lm(tmax ~ tmin))
 ```
 
 
